some JS progress, more images added

--- a/index.html
+++ b/index.html
@@ -67,12 +67,12 @@
 
                 <input type="checkbox" data-checked="false" data-desc="1.0.0" data-target="FormGroup5" id="Group2_0" name="CheckboxGroup2"/>
                 <label for="Group2_0">
-                    <div class="CheckboxDiv" onclick="InputLogic($(this))">Ar manžetēm</div>
+                    <div class="CheckboxDiv" onclick="InputLogic($(this))" data-images="17_FG_FL&17_FG_FR">Ar manžetēm</div>
                 </label>
 
                 <input type="checkbox" data-checked="false" data-desc="1.0.1" id="Group2_1" name="CheckboxGroup2"/>
                 <label for="Group2_1">
-                    <div class="CheckboxDiv" onclick="InputLogic($(this))">Klasiskas</div>
+                    <div class="CheckboxDiv" onclick="InputLogic($(this))" data-images="17_H_FL&17_H_FR">Klasiskas</div>
                 </label>
             </div>
 
@@ -82,12 +82,12 @@
 
                 <input type="checkbox" data-checked="false" data-desc="1.1.0" id="Group3_0" name="CheckboxGroup3"/>
                 <label for="Group3_0">
-                    <div class="CheckboxDiv" onclick="InputLogic($(this))">Klasiskas</div>
+                    <div class="CheckboxDiv" onclick="InputLogic($(this))" data-images="17_I_BL&17_I_BR">Klasiskas</div>
                 </label>
 
                 <input type="checkbox" data-checked="false" data-desc="1.1.1" id="Group3_1" name="CheckboxGroup3"/>
                 <label for="Group3_1">
-                    <div class="CheckboxDiv" onclick="InputLogic($(this))">Ar pogājumu</div>
+                    <div class="CheckboxDiv" onclick="InputLogic($(this))" data-images="17_J_BL&17_J_BR">Ar pogājumu</div>
                 </label>
             </div>
 
@@ -97,7 +97,7 @@
 
                 <input type="checkbox" data-checked="false" data-desc="1.2.0" id="Group4_0" name="CheckboxGroup4"/>
                 <label for="Group4_0">
-                    <div class="CheckboxDiv" onclick="InputLogic($(this))">Klasiskas</div>
+                    <div class="CheckboxDiv" onclick="InputLogic($(this))" data-images="17_K_FL&17_K_FR">Klasiskas</div>
                 </label>
 
                 <input type="checkbox" data-checked="false" data-desc="1.2.1" data-target="FormGroup6" id="Group4_1" name="CheckboxGroup4"/>
@@ -529,16 +529,26 @@
             <div class="ImageContainer w-100 d-flex">
                 <div class="ImageBoxFront w-50">
                     <img class="OverlayImage BaseImage" src="" alt="">
-                    <img class="OverlayImage 14_H_FR" src="images/14_H_FR.png" alt="">
                     <img class="OverlayImage 14_H_FL" src="images/14_H_FL.png" alt="">
-                    <img class="OverlayImage 14_I_FR" src="images/14_I_FR.png" alt="">
+                    <img class="OverlayImage 14_H_FR" src="images/14_H_FR.png" alt="">
                     <img class="OverlayImage 14_I_FL" src="images/14_I_FL.png" alt="">
+                    <img class="OverlayImage 14_I_FR" src="images/14_I_FR.png" alt="">
+                    <img class="OverlayImage 17_FG_FL" src="images/17_FG_FL.png" alt="">
+                    <img class="OverlayImage 17_FG_FR" src="images/17_FG_FR.png" alt="">
+                    <img class="OverlayImage 17_H_FL" src="images/17_H_FL.png" alt="">
+                    <img class="OverlayImage 17_H_FR" src="images/17_H_FR.png" alt="">
+                    <img class="OverlayImage 17_K_FL" src="images/17_K_FL.png" alt="">
+                    <img class="OverlayImage 17_K_FR" src="images/17_K_FR.png" alt="">
                 </div>
                 <div class="ImageBoxBack w-50">
-                    <img class="OverlayImage 14_H_BR" src="images/14_H_BR.png" alt="">
                     <img class="OverlayImage 14_H_BL" src="images/14_H_BL.png" alt="">
-                    <img class="OverlayImage 14_I_BR" src="images/14_I_BR.png" alt="">
+                    <img class="OverlayImage 14_H_BR" src="images/14_H_BR.png" alt="">
                     <img class="OverlayImage 14_I_BL" src="images/14_I_BL.png" alt="">
+                    <img class="OverlayImage 14_I_BR" src="images/14_I_BR.png" alt="">
+                    <img class="OverlayImage 17_I_BL" src="images/17_I_BL.png" alt="">
+                    <img class="OverlayImage 17_I_BR" src="images/17_I_BR.png" alt="">
+                    <img class="OverlayImage 17_J_BL" src="images/17_J_BL.png" alt="">
+                    <img class="OverlayImage 17_J_BR" src="images/17_J_BR.png" alt="">
                 </div>
             </div>
         </div>
