reworked js, still need back/front seperation

--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@
 
             <!--MAIN section 0-->
             <div class="FormSection FormGroup0 px-4 py-3">
-                <p>Krekla siluets</p>
+                <p>NEW Krekla siluets</p>
 
-                <input type="checkbox" data-checked="false" data-desc="0.0" id="Group0_0" name="CheckboxGroup0"/>
-                <label for="Group0_0">
-                    <div class="CheckboxDiv" onclick="InputLogic($(this))" data-images="14_H_FR&14_H_FL&14_H_BR&14_H_BL">Pieguļošs</div>
+                <label class="CheckboxDiv" for="Group0_0">
+                    <input onclick="InputLogic($(this))" type="checkbox" data-checked="false" data-desc="0.0" data-images="14_H" id="Group0_0" name="CheckboxGroup0"/>
+                    <p class="m-0">Pieguļošs</p>
                 </label>
 
-                <input type="checkbox" data-checked="false" data-desc="0.1" id="Group0_1" name="CheckboxGroup0"/>
-                <label for="Group0_1">
-                    <div class="CheckboxDiv" onclick="InputLogic($(this))" data-images="14_I_FR&14_I_FL&14_I_BR&14_I_BL">Brīvs</div>
+                <label class="CheckboxDiv" for="Group0_1">
+                    <input onclick="InputLogic($(this))" type="checkbox" data-checked="false" data-desc="0.1" data-images="14_I" id="Group0_1" name="CheckboxGroup0"/>
+                    <p class="m-0">Brīvs</p>
                 </label>
             </div>
 
@@ -43,96 +43,96 @@
 
             <!--MAIN section 1-->
             <div class="FormSection FormGroup1 px-4 py-3">
-                <p>Piedurknes</p>
+                <p>NEW Piedurknes</p>
 
-                <input type="checkbox" data-checked="false" data-desc="1.0" data-target="FormGroup2" id="Group1_0" name="CheckboxGroup1"/>
-                <label for="Group1_0">
-                    <div class="CheckboxDiv" onclick="InputLogic($(this))">Garās</div>
+                <label class="CheckboxDiv" for="Group1_0">
+                    <input onclick="InputLogic($(this))" type="checkbox" data-checked="false" data-desc="1.0" id="Group1_0" name="CheckboxGroup1"/>
+                    <p class="m-0">Garās</p>
                 </label>
 
-                <input type="checkbox" data-checked="false" data-desc="1.1" data-target="FormGroup3" id="Group1_1" name="CheckboxGroup1"/>
-                <label for="Group1_1">
-                    <div class="CheckboxDiv" onclick="InputLogic($(this))">Pusgarās</div>
+                <label class="CheckboxDiv" for="Group1_1">
+                    <input onclick="InputLogic($(this))" type="checkbox" data-checked="false" data-desc="1.1" id="Group1_1" name="CheckboxGroup1"/>
+                    <p class="m-0">Pusgarās</p>
                 </label>
 
-                <input type="checkbox" data-checked="false" data-desc="1.2" data-target="FormGroup4" id="Group1_2" name="CheckboxGroup1"/>
-                <label for="Group1_2">
-                    <div class="CheckboxDiv" onclick="InputLogic($(this))">Īsās</div>
+                <label class="CheckboxDiv" for="Group1_2">
+                    <input onclick="InputLogic($(this))" type="checkbox" data-checked="false" data-desc="1.2" id="Group1_2" name="CheckboxGroup1"/>
+                    <p class="m-0">Īsās</p>
                 </label>
             </div>
 
             <!--Subsection 2-->
             <div class="FormSection FormSubsection FormGroup2 px-4 pb-3">
-                <p>Garās (kategorija)</p>
+                <p>NEW Garās (kategorija)</p>
 
-                <input type="checkbox" data-checked="false" data-desc="1.0.0" data-target="FormGroup5" id="Group2_0" name="CheckboxGroup2"/>
-                <label for="Group2_0">
-                    <div class="CheckboxDiv" onclick="InputLogic($(this))" data-images="17_FG_FL&17_FG_FR">Ar manžetēm</div>
+                <label class="CheckboxDiv" for="Group2_0">
+                    <input onclick="InputLogic($(this))" type="checkbox" data-checked="false" data-desc="1.0.0" data-images="17_FG" id="Group2_0" name="CheckboxGroup2"/>
+                    <p class="m-0">Ar manžetēm</p>
                 </label>
 
-                <input type="checkbox" data-checked="false" data-desc="1.0.1" id="Group2_1" name="CheckboxGroup2"/>
-                <label for="Group2_1">
-                    <div class="CheckboxDiv" onclick="InputLogic($(this))" data-images="17_H_FL&17_H_FR">Klasiskas</div>
+                <label class="CheckboxDiv" for="Group2_1">
+                    <input onclick="InputLogic($(this))" type="checkbox" data-checked="false" data-desc="1.0.1" data-images="17_H" id="Group2_1" name="CheckboxGroup2"/>
+                    <p class="m-0">Klasiskas</p>
                 </label>
             </div>
 
             <!--Subsection 3-->
             <div class="FormSection FormSubsection FormGroup3 px-4 pb-3">
-                <p>Pusgarās (kategorija)</p>
+                <p>NEW Pusgarās (kategorija)</p>
 
-                <input type="checkbox" data-checked="false" data-desc="1.1.0" id="Group3_0" name="CheckboxGroup3"/>
-                <label for="Group3_0">
-                    <div class="CheckboxDiv" onclick="InputLogic($(this))" data-images="17_I_BL&17_I_BR">Klasiskas</div>
+                <label class="CheckboxDiv" for="Group3_0">
+                    <input onclick="InputLogic($(this))" type="checkbox" data-checked="false" data-desc="1.1.0" data-images="17_I" id="Group3_0" name="CheckboxGroup3"/>
+                    <p class="m-0">Klasiskas</p>
                 </label>
 
-                <input type="checkbox" data-checked="false" data-desc="1.1.1" id="Group3_1" name="CheckboxGroup3"/>
-                <label for="Group3_1">
-                    <div class="CheckboxDiv" onclick="InputLogic($(this))" data-images="17_J_BL&17_J_BR">Ar pogājumu</div>
+                <label class="CheckboxDiv" for="Group3_1">
+                    <input onclick="InputLogic($(this))" type="checkbox" data-checked="false" data-desc="1.1.1" data-images="17_J" id="Group3_1" name="CheckboxGroup3"/>
+                    <p class="m-0">Ar pogājumu</p>
                 </label>
             </div>
 
             <!--Subsection 4-->
             <div class="FormSection FormSubsection FormGroup4 px-4 pb-3">
-                <p>Īsās (kategorija)</p>
+                <p>NEW Īsās (kategorija)</p>
 
-                <input type="checkbox" data-checked="false" data-desc="1.2.0" id="Group4_0" name="CheckboxGroup4"/>
-                <label for="Group4_0">
-                    <div class="CheckboxDiv" onclick="InputLogic($(this))" data-images="17_K_FL&17_K_FR">Klasiskas</div>
+                <label class="CheckboxDiv" for="Group4_0">
+                    <input onclick="InputLogic($(this))" type="checkbox" data-checked="false" data-desc="1.2.0" data-images="17_K" id="Group4_0" name="CheckboxGroup4"/>
+                    <p class="m-0">Klasiskas</p>
                 </label>
 
-                <input type="checkbox" data-checked="false" data-desc="1.2.1" data-target="FormGroup6" id="Group4_1" name="CheckboxGroup4"/>
-                <label for="Group4_1">
-                    <div class="CheckboxDiv" onclick="InputLogic($(this))">Ar atloku</div>
+                <label class="CheckboxDiv" for="Group4_1">
+                    <input onclick="InputLogic($(this))" type="checkbox" data-checked="false" data-desc="1.2.1" id="Group4_1" name="CheckboxGroup4"/>
+                    <p class="m-0">Ar atloku</p>
                 </label>
             </div>
 
             <!--Subsection 5-->
             <div class="FormSection FormSubsection FormGroup5 px-4 pb-3">
-                <p>Ar manžetēm (kategorija)</p>
+                <p>NEW Ar manžetēm (kategorija)</p>
 
-                <input type="checkbox" data-checked="false" data-desc="1.0.0.0" id="Group5_0" name="CheckboxGroup5"/>
-                <label for="Group5_0">
-                    <div class="CheckboxDiv" onclick="InputLogic($(this))">Klasiskas</div>
+                <label class="CheckboxDiv" for="Group5_0">
+                    <input onclick="InputLogic($(this))" type="checkbox" data-checked="false" data-desc="1.0.0.0" data-images="18_F" id="Group5_0" name="CheckboxGroup5"/>
+                    <p class="m-0">Klasiskas</p>
                 </label>
 
-                <input type="checkbox" data-checked="false" data-desc="1.0.0.1" id="Group5_1" name="CheckboxGroup5"/>
-                <label for="Group5_1">
-                    <div class="CheckboxDiv" onclick="InputLogic($(this))">Ar detaļu</div>
+                <label class="CheckboxDiv" for="Group5_1">
+                    <input onclick="InputLogic($(this))" type="checkbox" data-checked="false" data-desc="1.0.0.1" data-images="18_G" id="Group5_1" name="CheckboxGroup5"/>
+                    <p class="m-0">Ar detaļu</p>
                 </label>
             </div>
 
             <!--Subsection 6-->
             <div class="FormSection FormSubsection FormGroup6 px-4 pb-3">
-                <p>Ar atloku (kategorija)</p>
+                <p>NEW Ar atloku (kategorija)</p>
 
-                <input type="checkbox" data-checked="false" data-desc="1.2.1.0" id="Group6_0" name="CheckboxGroup6"/>
-                <label for="Group6_0">
-                    <div class="CheckboxDiv" onclick="InputLogic($(this))">Ar pogu</div>
+                <label class="CheckboxDiv" for="Group6_0">
+                    <input onclick="InputLogic($(this))" type="checkbox" data-checked="false" data-desc="1.2.1.0" data-images="18_L" id="Group6_0" name="CheckboxGroup6"/>
+                    <p class="m-0">Ar pogu</p>
                 </label>
 
-                <input type="checkbox" data-checked="false" data-desc="1.2.1.1" id="Group6_1" name="CheckboxGroup6"/>
-                <label for="Group6_1">
-                    <div class="CheckboxDiv" onclick="InputLogic($(this))">Bez pogas</div>
+                <label class="CheckboxDiv" for="Group6_1">
+                    <input onclick="InputLogic($(this))" type="checkbox" data-checked="false" data-desc="1.2.1.1" data-images="18_M" id="Group6_1" name="CheckboxGroup6"/>
+                    <p class="m-0">Bez pogas</p>
                 </label>
             </div>
 
@@ -529,26 +529,26 @@
             <div class="ImageContainer w-100 d-flex">
                 <div class="ImageBoxFront w-50">
                     <img class="OverlayImage BaseImage" src="" alt="">
-                    <img class="OverlayImage 14_H_FL" src="images/14_H_FL.png" alt="">
-                    <img class="OverlayImage 14_H_FR" src="images/14_H_FR.png" alt="">
-                    <img class="OverlayImage 14_I_FL" src="images/14_I_FL.png" alt="">
-                    <img class="OverlayImage 14_I_FR" src="images/14_I_FR.png" alt="">
-                    <img class="OverlayImage 17_FG_FL" src="images/17_FG_FL.png" alt="">
-                    <img class="OverlayImage 17_FG_FR" src="images/17_FG_FR.png" alt="">
-                    <img class="OverlayImage 17_H_FL" src="images/17_H_FL.png" alt="">
-                    <img class="OverlayImage 17_H_FR" src="images/17_H_FR.png" alt="">
-                    <img class="OverlayImage 17_K_FL" src="images/17_K_FL.png" alt="">
-                    <img class="OverlayImage 17_K_FR" src="images/17_K_FR.png" alt="">
+                    <img class="OverlayImage 14_H" src="images/14_H_FL.png" alt="">
+                    <img class="OverlayImage 14_H" src="images/14_H_FR.png" alt="">
+                    <img class="OverlayImage 14_I" src="images/14_I_FL.png" alt="">
+                    <img class="OverlayImage 14_I" src="images/14_I_FR.png" alt="">
+                    <img class="OverlayImage 17_FG" src="images/17_FG_FL.png" alt="">
+                    <img class="OverlayImage 17_FG" src="images/17_FG_FR.png" alt="">
+                    <img class="OverlayImage 17_H" src="images/17_H_FL.png" alt="">
+                    <img class="OverlayImage 17_H" src="images/17_H_FR.png" alt="">
+                    <img class="OverlayImage 17_K" src="images/17_K_FL.png" alt="">
+                    <img class="OverlayImage 17_K" src="images/17_K_FR.png" alt="">
                 </div>
                 <div class="ImageBoxBack w-50">
-                    <img class="OverlayImage 14_H_BL" src="images/14_H_BL.png" alt="">
-                    <img class="OverlayImage 14_H_BR" src="images/14_H_BR.png" alt="">
-                    <img class="OverlayImage 14_I_BL" src="images/14_I_BL.png" alt="">
-                    <img class="OverlayImage 14_I_BR" src="images/14_I_BR.png" alt="">
-                    <img class="OverlayImage 17_I_BL" src="images/17_I_BL.png" alt="">
-                    <img class="OverlayImage 17_I_BR" src="images/17_I_BR.png" alt="">
-                    <img class="OverlayImage 17_J_BL" src="images/17_J_BL.png" alt="">
-                    <img class="OverlayImage 17_J_BR" src="images/17_J_BR.png" alt="">
+                    <img class="OverlayImage 14_H" src="images/14_H_BL.png" alt="">
+                    <img class="OverlayImage 14_H" src="images/14_H_BR.png" alt="">
+                    <img class="OverlayImage 14_I" src="images/14_I_BL.png" alt="">
+                    <img class="OverlayImage 14_I" src="images/14_I_BR.png" alt="">
+                    <img class="OverlayImage 17_I" src="images/17_I_BL.png" alt="">
+                    <img class="OverlayImage 17_I" src="images/17_I_BR.png" alt="">
+                    <img class="OverlayImage 17_J" src="images/17_J_BL.png" alt="">
+                    <img class="OverlayImage 17_J" src="images/17_J_BR.png" alt="">
                 </div>
             </div>
         </div>
