more progress on images

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
             <!--MAIN section 0-->
             <div class="FormSection FormGroup0 px-4 py-3">
-                <p>NEW Krekla siluets</p>
+                <p>Krekla siluets</p><!--NEW-->
 
                 <label class="CheckboxDiv" for="Group0_0">
                     <input onclick="InputLogic($(this))" type="checkbox" data-checked="false" data-desc="0.0" data-images="14_H" id="Group0_0" name="CheckboxGroup0"/>
@@ -43,7 +43,7 @@
 
             <!--MAIN section 1-->
             <div class="FormSection FormGroup1 px-4 py-3">
-                <p>NEW Piedurknes</p>
+                <p>Piedurknes</p><!--NEW-->
 
                 <label class="CheckboxDiv" for="Group1_0">
                     <input onclick="InputLogic($(this))" type="checkbox" data-checked="false" data-desc="1.0" id="Group1_0" name="CheckboxGroup1"/>
@@ -63,7 +63,7 @@
 
             <!--Subsection 2-->
             <div class="FormSection FormSubsection FormGroup2 px-4 pb-3">
-                <p>NEW Garās (kategorija)</p>
+                <p>Garās (kategorija)</p><!--NEW-->
 
                 <label class="CheckboxDiv" for="Group2_0">
                     <input onclick="InputLogic($(this))" type="checkbox" data-checked="false" data-desc="1.0.0" data-images="17_FG" id="Group2_0" name="CheckboxGroup2"/>
@@ -78,7 +78,7 @@
 
             <!--Subsection 3-->
             <div class="FormSection FormSubsection FormGroup3 px-4 pb-3">
-                <p>NEW Pusgarās (kategorija)</p>
+                <p>Pusgarās (kategorija)</p><!--NEW-->
 
                 <label class="CheckboxDiv" for="Group3_0">
                     <input onclick="InputLogic($(this))" type="checkbox" data-checked="false" data-desc="1.1.0" data-images="17_I" id="Group3_0" name="CheckboxGroup3"/>
@@ -93,7 +93,7 @@
 
             <!--Subsection 4-->
             <div class="FormSection FormSubsection FormGroup4 px-4 pb-3">
-                <p>NEW Īsās (kategorija)</p>
+                <p>Īsās (kategorija)</p><!--NEW-->
 
                 <label class="CheckboxDiv" for="Group4_0">
                     <input onclick="InputLogic($(this))" type="checkbox" data-checked="false" data-desc="1.2.0" data-images="17_K" id="Group4_0" name="CheckboxGroup4"/>
@@ -108,7 +108,7 @@
 
             <!--Subsection 5-->
             <div class="FormSection FormSubsection FormGroup5 px-4 pb-3">
-                <p>NEW Ar manžetēm (kategorija)</p>
+                <p>Ar manžetēm (kategorija)</p><!--NEW-->
 
                 <label class="CheckboxDiv" for="Group5_0">
                     <input onclick="InputLogic($(this))" type="checkbox" data-checked="false" data-desc="1.0.0.0" data-images="18_F" id="Group5_0" name="CheckboxGroup5"/>
@@ -123,7 +123,7 @@
 
             <!--Subsection 6-->
             <div class="FormSection FormSubsection FormGroup6 px-4 pb-3">
-                <p>NEW Ar atloku (kategorija)</p>
+                <p>Ar atloku (kategorija)</p><!--NEW-->
 
                 <label class="CheckboxDiv" for="Group6_0">
                     <input onclick="InputLogic($(this))" type="checkbox" data-checked="false" data-desc="1.2.1.0" data-images="18_L" id="Group6_0" name="CheckboxGroup6"/>
@@ -528,27 +528,27 @@
         <div class="ImageHalf mt-4 order-1 order-md-2">
             <div class="ImageContainer w-100 d-flex">
                 <div class="ImageBoxFront w-50">
-                    <img class="OverlayImage BaseImage" src="" alt="">
-                    <img class="OverlayImage 14_H" src="images/14_H_FL.png" alt="">
-                    <img class="OverlayImage 14_H" src="images/14_H_FR.png" alt="">
-                    <img class="OverlayImage 14_I" src="images/14_I_FL.png" alt="">
-                    <img class="OverlayImage 14_I" src="images/14_I_FR.png" alt="">
-                    <img class="OverlayImage 17_FG" src="images/17_FG_FL.png" alt="">
-                    <img class="OverlayImage 17_FG" src="images/17_FG_FR.png" alt="">
-                    <img class="OverlayImage 17_H" src="images/17_H_FL.png" alt="">
-                    <img class="OverlayImage 17_H" src="images/17_H_FR.png" alt="">
-                    <img class="OverlayImage 17_K" src="images/17_K_FL.png" alt="">
-                    <img class="OverlayImage 17_K" src="images/17_K_FR.png" alt="">
+                    <img class="OverlayImage BaseImage" src="images/PAMATS_F.png" alt="">
+                    <img class="OverlayImage 14_H" src="images/14_H_F.png" alt="">
+                    <img class="OverlayImage 14_I" src="images/14_I_F.png" alt="">
+                    <img class="OverlayImage 17_FG" src="images/17_FG_F.png" alt="">
+                    <img class="OverlayImage 17_H" src="images/17_H_F.png" alt="">
+                    <img class="OverlayImage 17_I" src="images/17_I_F.png" alt="">
+                    <img class="OverlayImage 17_K" src="images/17_K_F.png" alt="">
+                    <img class="OverlayImage 17_J" src="images/17_J_F.png" alt="">
                 </div>
                 <div class="ImageBoxBack w-50">
-                    <img class="OverlayImage 14_H" src="images/14_H_BL.png" alt="">
-                    <img class="OverlayImage 14_H" src="images/14_H_BR.png" alt="">
-                    <img class="OverlayImage 14_I" src="images/14_I_BL.png" alt="">
-                    <img class="OverlayImage 14_I" src="images/14_I_BR.png" alt="">
-                    <img class="OverlayImage 17_I" src="images/17_I_BL.png" alt="">
-                    <img class="OverlayImage 17_I" src="images/17_I_BR.png" alt="">
-                    <img class="OverlayImage 17_J" src="images/17_J_BL.png" alt="">
-                    <img class="OverlayImage 17_J" src="images/17_J_BR.png" alt="">
+                    <img class="OverlayImage BaseImage" src="images/PAMATS_B.png" alt="">
+                    <img class="OverlayImage 14_H" src="images/14_H_B.png" alt="">
+                    <img class="OverlayImage 14_I" src="images/14_I_B.png" alt="">
+                    <img class="OverlayImage 17_H" src="images/17_H_B.png" alt="">
+                    <img class="OverlayImage 17_I" src="images/17_I_B.png" alt="">
+                    <img class="OverlayImage 17_J" src="images/17_J_B.png" alt="">
+                    <img class="OverlayImage 18_F" src="images/18_F_B.png" alt="">
+                    <img class="OverlayImage 18_G" src="images/18_G_B.png" alt="">
+                    <img class="OverlayImage 18_L" src="images/18_L_B.png" alt="">
+                    <img class="OverlayImage 18_M" src="images/18_M_B.png" alt="">
+
                 </div>
             </div>
         </div>
