mostly finished design, some details need fixing

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
             <!--MAIN section 0-->
             <div class="FormSection FormGroup0 px-4 py-3">
-                <p>Krekla siluets</p><!--NEW-->
+                <p>Krekla siluets</p>
 
                 <label class="CheckboxDiv" for="Group0_0">
                     <input onclick="InputLogic($(this))" type="checkbox" data-checked="false" data-desc="0.0" data-images="14_H" id="Group0_0" name="CheckboxGroup0"/>
@@ -43,7 +43,7 @@
 
             <!--MAIN section 1-->
             <div class="FormSection FormGroup1 px-4 py-3">
-                <p>Piedurknes</p><!--NEW-->
+                <p>Piedurknes</p>
 
                 <label class="CheckboxDiv" for="Group1_0">
                     <input onclick="InputLogic($(this))" type="checkbox" data-checked="false" data-desc="1.0" id="Group1_0" name="CheckboxGroup1"/>
@@ -63,7 +63,7 @@
 
             <!--Subsection 2-->
             <div class="FormSection FormSubsection FormGroup2 px-4 pb-3">
-                <p>Garās (kategorija)</p><!--NEW-->
+                <p>Garās (kategorija)</p>
 
                 <label class="CheckboxDiv" for="Group2_0">
                     <input onclick="InputLogic($(this))" type="checkbox" data-checked="false" data-desc="1.0.0" data-images="17_FG" id="Group2_0" name="CheckboxGroup2"/>
@@ -78,7 +78,7 @@
 
             <!--Subsection 3-->
             <div class="FormSection FormSubsection FormGroup3 px-4 pb-3">
-                <p>Pusgarās (kategorija)</p><!--NEW-->
+                <p>Pusgarās (kategorija)</p>
 
                 <label class="CheckboxDiv" for="Group3_0">
                     <input onclick="InputLogic($(this))" type="checkbox" data-checked="false" data-desc="1.1.0" data-images="17_I" id="Group3_0" name="CheckboxGroup3"/>
@@ -93,7 +93,7 @@
 
             <!--Subsection 4-->
             <div class="FormSection FormSubsection FormGroup4 px-4 pb-3">
-                <p>Īsās (kategorija)</p><!--NEW-->
+                <p>Īsās (kategorija)</p>
 
                 <label class="CheckboxDiv" for="Group4_0">
                     <input onclick="InputLogic($(this))" type="checkbox" data-checked="false" data-desc="1.2.0" data-images="17_K" id="Group4_0" name="CheckboxGroup4"/>
@@ -108,7 +108,7 @@
 
             <!--Subsection 5-->
             <div class="FormSection FormSubsection FormGroup5 px-4 pb-3">
-                <p>Ar manžetēm (kategorija)</p><!--NEW-->
+                <p>Ar manžetēm (kategorija)</p>
 
                 <label class="CheckboxDiv" for="Group5_0">
                     <input onclick="InputLogic($(this))" type="checkbox" data-checked="false" data-desc="1.0.0.0" data-images="18_F" id="Group5_0" name="CheckboxGroup5"/>
@@ -123,7 +123,7 @@
 
             <!--Subsection 6-->
             <div class="FormSection FormSubsection FormGroup6 px-4 pb-3">
-                <p>Ar atloku (kategorija)</p><!--NEW-->
+                <p>Ar atloku (kategorija)</p>
 
                 <label class="CheckboxDiv" for="Group6_0">
                     <input onclick="InputLogic($(this))" type="checkbox" data-checked="false" data-desc="1.2.1.0" data-images="18_L" id="Group6_0" name="CheckboxGroup6"/>
@@ -140,7 +140,7 @@
 
             <!--MAIN section 7-->
             <div class="FormSection FormGroup7 px-4 py-3">
-                <p>Apkakle</p><!--NEW-->
+                <p>Apkakle</p>
 
                 <label class="CheckboxDiv" for="Group7_0">
                     <input onclick="InputLogic($(this))" type="checkbox" data-checked="false" data-desc="2.0" id="Group7_0" name="CheckboxGroup7"/>
@@ -161,7 +161,7 @@
 
             <!--Subsection 8-->
             <div class="FormSection FormSubsection FormGroup8 px-4 pb-3">
-                <p>Ar apkakli (kategorija)</p><!--NEW-->
+                <p>Ar apkakli (kategorija)</p>
 
                 <label class="CheckboxDiv" for="Group8_0">
                     <input onclick="InputLogic($(this))" type="checkbox" data-checked="false" data-desc="2.0.0" data-images="21_HI" id="Group8_0" name="CheckboxGroup8"/>
@@ -176,7 +176,7 @@
 
             <!--Subsection 9-->
             <div class="FormSection FormSubsection FormGroup9 px-4 pb-3">
-                <p>Bez apkakles (kategorija)</p><!--NEW-->
+                <p>Bez apkakles (kategorija)</p>
 
                 <label class="CheckboxDiv" for="Group9_0">
                     <input onclick="InputLogic($(this))" type="checkbox" data-checked="false" data-desc="2.1.0" data-images="21_J" id="Group9_0" name="CheckboxGroup9"/>
@@ -191,7 +191,7 @@
 
             <!--Subsection 10-->
             <div class="FormSection FormSubsection FormGroup10 px-4 pb-3">
-                <p>Ar izgriezumu (kategorija)</p><!--NEW-->
+                <p>Ar izgriezumu (kategorija)</p>
 
                 <label class="CheckboxDiv" for="Group10_1">
                     <input onclick="InputLogic($(this))" type="checkbox" data-checked="false" data-desc="2.2.0" data-images="21_L" id="Group10_1" name="CheckboxGroup10"/>
@@ -201,7 +201,7 @@
 
             <!--Subsection 11-->
             <div class="FormSection FormSubsection FormGroup11 px-4 pb-3">
-                <p>Stāvkrādziņa (kategorija)</p><!--NEW-->
+                <p>Stāvkrādziņa (kategorija)</p>
 
                 <label class="CheckboxDiv" for="Group11_0">
                     <input onclick="InputLogic($(this))" type="checkbox" data-checked="false" data-desc="2.0.0.0" data-images="22_FH" id="Group11_0" name="CheckboxGroup11"/>
@@ -216,7 +216,7 @@
 
             <!--Subsection 12-->
             <div class="FormSection FormSubsection FormGroup12 px-4 pb-3">
-                <p>Klasiskā apkakle (kategorija)</p><!--NEW-->
+                <p>Klasiskā apkakle (kategorija)</p>
 
                 <label class="CheckboxDiv" for="Group12_0">
                     <input onclick="InputLogic($(this))" type="checkbox" data-checked="false" data-desc="2.0.1.0" data-images="22_FH" id="Group12_0" name="CheckboxGroup12"/>
@@ -233,7 +233,7 @@
 
             <!--MAIN section 13-->
             <div class="FormSection FormGroup13 px-4 py-3">
-                <p>Apakšmala</p><!--NEW-->
+                <p>Apakšmala</p>
 
                 <label class="CheckboxDiv" for="Group13_0">
                     <input onclick="InputLogic($(this))" type="checkbox" data-checked="false" data-desc="3.0" data-images="24_I" id="Group13_0" name="CheckboxGroup13"/>
@@ -250,7 +250,7 @@
 
             <!--MAIN section 14-->
             <div class="FormSection FormGroup14 px-4 py-3">
-                <p>Kabatas</p><!--NEW-->
+                <p>Kabatas</p>
 
                 <label class="CheckboxDiv" for="Group14_0">
                     <input onclick="InputLogic($(this))" type="checkbox" data-checked="false" data-desc="4.0" id="Group14_0" name="CheckboxGroup14"/>
@@ -265,7 +265,7 @@
 
             <!--Subsection 15-->
             <div class="FormSection FormSubsection FormGroup15 px-4 pb-3">
-                <p>Bez kabatām (kategorija)</p><!--NEW-->
+                <p>Bez kabatām (kategorija)</p>
 
                 <label class="CheckboxDiv" for="Group15_0">
                     <input onclick="InputLogic($(this))" type="checkbox" data-checked="false" data-desc="4.0.0" data-images="27_F" id="Group15_0" name="CheckboxGroup15"/>
@@ -280,7 +280,7 @@
 
             <!--Subsection 16-->
             <div class="FormSection FormSubsection FormGroup16 px-4 pb-3">
-                <p>Ar kabatām (kategorija)</p><!--NEW-->
+                <p>Ar kabatām (kategorija)</p>
 
                 <label class="CheckboxDiv" for="Group16_0">
                     <input onclick="InputLogic($(this))" type="checkbox" data-checked="false" data-desc="4.1.0" id="Group16_0" name="CheckboxGroup16"/>
@@ -295,7 +295,7 @@
 
             <!--Subsection 17-->
             <div class="FormSection FormSubsection FormGroup17 px-4 pb-3">
-                <p>Ar vienu kabatu (kategorija)</p><!--NEW-->
+                <p>Ar vienu kabatu (kategorija)</p>
 
                 <label class="CheckboxDiv" for="Group17_0">
                     <input onclick="InputLogic($(this))" type="checkbox" data-checked="false" data-desc="4.1.0.0" data-images="28_H" id="Group17_0" name="CheckboxGroup17"/>
@@ -310,7 +310,7 @@
 
             <!--Subsection 18-->
             <div class="FormSection FormSubsection FormGroup18 px-4 pb-3">
-                <p>Ar divām kabatām (kategorija)</p><!--NEW-->
+                <p>Ar divām kabatām (kategorija)</p>
 
                 <label class="CheckboxDiv" for="Group18_0">
                     <input onclick="InputLogic($(this))" type="checkbox" data-checked="false" data-desc="4.1.1.0" data-images="28_J" id="Group18_0" name="CheckboxGroup18"/>
@@ -327,7 +327,7 @@
 
             <!--MAIN section 19-->
             <div class="FormSection FormGroup19 px-4 py-3">
-                <p>Izmēri</p><!--NEW-->
+                <p>Izmēri</p>
 
                 <label class="CheckboxDiv" for="Group19_0">
                     <input onclick="InputLogic($(this))" type="checkbox" data-checked="false" data-desc="5.0" id="Group19_0" name="CheckboxGroup19"/>
@@ -460,24 +460,19 @@
 
 
             <!--MAIN section 22-->
-            <div class="FormSection FormGroup23 px-4 py-3">
+            <div class="FormSection FormSubsection FormGroup23 px-4 py-3">
                 <p>Cits variants (kategorija)</p>
 
-                <label class="CheckboxDiv" for="Group23_0">
-                    <input onclick="InputLogic($(this))" type="checkbox" data-checked="false" data-desc="7.0" id="Group23_0" name="CheckboxGroup23"/>
-                    <p class="m-0">[ Šeit varēs rakstīt ]</p>
+                <label class="" for="Group23_0">
+                    <input class="d-inline-block mb-2 TextInput" type="text" placeholder="Vārds" data-checked="false" data-desc="6.5.0" id="Group23_0" name="CheckboxGroup23">
                 </label>
             </div>
 
 
 
-
-            <p>------ temporary divider</p>
-
-
-
-            <div class="FormSection px-4 py-3">
-                <p><b>Krāsa</b></p>
+            <!--MAIN section 23-->
+            <div class="FormSection FormGroup23 px-4 py-3">
+                <p>Krāsa</p>
 
                 <input type="checkbox" name="group8[]"/>
                 <label>
@@ -500,24 +495,15 @@
                 </label>
             </div>
 
-            <!--MAIN section 25-->
-            <div class="FormSection FormGroup1 px-4 py-3">
+            <!--MAIN section 24-->
+            <div class="FormSection FormGroup24 px-4 py-3">
                 <p>Aizpildiet laukus</p>
 
-                <input type="checkbox" data-checked="false" id="Group25_0" name="CheckboxGroup25"/>
-                <label for="Group25_0">
-                    <div class="CheckboxDiv" onclick="">Vārds</div>
-                </label>
+                <input class="d-inline-block mb-2 TextInput" type="text" placeholder="Vārds">
 
-                <input type="checkbox" data-checked="false" id="Group25_1" name="CheckboxGroup25"/>
-                <label for="Group25_1">
-                    <div class="CheckboxDiv" onclick="">Telefona numurs</div>
-                </label>
+                <input class="d-inline-block mb-2 TextInput" type="text" placeholder="Telefona numurs">
 
-                <input type="checkbox" data-checked="false" id="Group25_2" name="CheckboxGroup25"/>
-                <label for="Group25_2">
-                    <div class="CheckboxDiv" onclick="">E-pasts</div>
-                </label>
+                <input class="d-inline-block mb-2 TextInput" type="text" placeholder="E-pasts">                
             </div>
 
             <div class="FormHeader mt-5">
