fixed js glitches, updating images

--- a/index.html
+++ b/index.html
@@ -394,8 +394,9 @@
                     <p class="m-0">6XL</p>
                 </label>
 
-                <label class="CheckboxDiv" for="Group20_10">
-                    <input onclick="InputLogic($(this))" type="checkbox" data-checked="false" data-desc="5.0.10" id="Group20_10" name="CheckboxGroup20"/>
+                <label class="CheckboxDiv" for="Group20_A">
+                    <input onclick="InputLogic($(this))" type="checkbox" data-checked="false" data-desc="5.5.0" id="Group20_A" name="CheckboxGroup20"/>
+                    <!--This 5.5.0 data-desc is a workaround-->
                     <p class="m-0">7XL</p>
                 </label>
             </div>
@@ -517,7 +518,7 @@
         <div class="ImageHalf mt-4 order-1 order-md-2">
             <div class="ImageContainer w-100 d-flex">
                 <div class="ImageBoxFront w-50">
-                    <img class="OverlayImage BaseImage" src="images/PAMATS_F.png" alt="">
+                    <img class="OverlayImage BaseImage" src="images/F_STANDART.png" alt="">
                     <img class="OverlayImage 14_H" src="images/14_H_F.png" alt="">
                     <img class="OverlayImage 14_I" src="images/14_I_F.png" alt="">
                     <img class="OverlayImage 17_FG" src="images/17_FG_F.png" alt="">
@@ -542,7 +543,7 @@
                     <img class="OverlayImage 28_K" src="images/28_K_F.png" alt="">
                 </div>
                 <div class="ImageBoxBack w-50">
-                    <img class="OverlayImage BaseImage" src="images/PAMATS_B.png" alt="">
+                    <img class="OverlayImage BaseImage" src="images/B_STANDART.png" alt="">
                     <img class="OverlayImage 14_H" src="images/14_H_B.png" alt="">
                     <img class="OverlayImage 14_I" src="images/14_I_B.png" alt="">
                     <img class="OverlayImage 17_FG" src="images/17_FG_B.png" alt="">
